# embecode

./: .embecode.toml.example  .gitignore  FINDINGS.md  LICENSE.md  MANUAL_TEST_RESULTS.md  PLAN.md  README.md  TEST_COVERAGE_VERIFICATION.md  iteratr.yml  manual_test.py  opencode.jsonc  pyproject.toml
.chunkhound/: db.wal
.github/workflows/: ci.yml
.iteratr/data/jetstream/$G/streams/iteratr_events/: meta.inf  meta.sum
.iteratr/data/jetstream/$G/streams/iteratr_events/msgs/: 1.blk  index.db
.iteratr/data/jetstream/$G/streams/iteratr_events/obs/A2DnrTwR/: meta.inf  meta.sum
.iteratr/data/jetstream/$G/streams/iteratr_events/obs/QZO2Cte7/: meta.inf  meta.sum
.iteratr/data/jetstream/$G/streams/iteratr_events/obs/aktrhmJN/: meta.inf  meta.sum
.iteratr/data/jetstream/$G/streams/iteratr_events/obs/snMmJDyD/: meta.inf  meta.sum
.iteratr/data/jetstream/$G/streams/iteratr_events/obs/zf1jCiRg/: meta.inf  meta.sum
specs/: catchup-indexing.md  concise-search-output.md  concurrent-process-test.md  gitignore-support.md  granular-search-timing.md  lock-file-daemon.md  match-aware-search-response.md  memory-leak-test.md
src/embecode/: __init__.py  cache.py  chunker.py  cli.py  config.py  db.py  embedder.py  indexer.py  ipc.py  searcher.py  server.py  watcher.py
tests/: conftest.py  test_cache.py  test_chunker.py  test_cli_cache.py  test_concurrent.py  test_config.py  test_db.py  test_edge_cases.py  test_embedder.py  test_gitignore.py  test_indexer.py  test_integration.py  test_ipc.py  test_lock_file.py  test_lock_file_integration.py  test_memory.py  test_performance.py  test_searcher.py  test_server.py  test_version.py  test_watcher.py
tests/helpers/: indexer_process.py  mocks.py  owner_process.py
