[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "embecode"
version = "0.1.0"
description = "Local-first MCP server for semantic + keyword hybrid code search"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.12,<3.13"
keywords = ["mcp", "code-search", "embeddings", "semantic-search", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",

  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "fastmcp>=2.0",
  "tree-sitter>=0.23",
  "tree-sitter-languages>=1.10",
  "sentence-transformers>=3.0",
  "duckdb>=1.1",
  "watchfiles>=1.0",

]

[project.scripts]
embecode = "embecode.cli:main"

[project.urls]
Homepage = "https://github.com/jdtzmn/embecode"
Repository = "https://github.com/jdtzmn/embecode"
Issues = "https://github.com/jdtzmn/embecode/issues"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/embecode"]

[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "RUF", # ruff-specific rules
]
ignore = [
  "E501", # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["embecode"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=embecode --cov-report=term-missing --cov-report=xml"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/embecode"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
